syntax = "proto3";

package access_v1;

import "protoc-gen-openapiv2/options/annotations.proto";
import "google/api/annotations.proto";

option go_package = "github.com/astronely/financial-helper_microservices/pkg/auth_v1;auth_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "1.0.0"
    contact: {
      name: "astronely"
    };
  };

  host: "localhost:8080",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};


service AuthV1 {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/login"
      body: "*"
    };
  };

  rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/refresh_token"
      body: "*"
    };
  };
  rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/access_token"
      body: "*"
    };
  };
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
}

message GetRefreshTokenRequest {
  string refresh_token = 1;
}

message GetRefreshTokenResponse {
  string refresh_token = 1;
}

message GetAccessTokenRequest {
  string refresh_token = 1;
}

message GetAccessTokenResponse {
  string access_token = 1;
}